fixed img stretch

--- a/css/page.css
+++ b/css/page.css
@@ -97,7 +97,6 @@ nav {
 }
 
 .page img {
-    width: var(--text-margin);
     max-width: var(--max-width);
     margin-bottom: var(--space-bottom);
 }
